kasm/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasm-service
  namespace: kasm
spec:
  selector:
    app: kasm
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
